--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-validator": "^6.6.1",
     "mongoose": "^5.9.27",
     "multer": "^1.4.2",
-    "passport": "^0.4.1"
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
   }
 }
